Wed Dec 11 18:45:09 CET 2002 Daniel Veillard <daniel@veillard.com>

	* doc/Makefile.am doc/apibuild.py doc/libxslt-api.xml:
	  copied over the apibuild.py from libxml2, adapted a bit and
	  regenerated the API description in XML. Todo: libexslt-api.xml
	* libxslt/attributes.c libxslt/documents.c libxslt/extensions.c
	  libxslt/imports.c libxslt/numbers.c libxslt/numbersInternals.h
	  libxslt/pattern.c libxslt/preproc.c libxslt/security.c
	  libxslt/templates.c libxslt/transform.c libxslt/transform.h
	  libxslt/variables.c libxslt/xslt.c libxslt/xsltInternals.h
	  libxslt/xsltutils.c libxslt/xsltutils.h: cleanup based on the
	  report from the scripts.
	* libxslt.spec.in: make sure libxslt-api.xml ends up in the devel
	  package

Thu Dec  5 18:05:44 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: xsl:element generated superfluous xmlns
	  declarations, closes bug #99905
	* tests/docs/Makefile.am tests/docs/bug-101.xml
	  tests/general/Makefile.am tests/general/bug-101.*: added the
	  example in the regression tests for this case

Wed Dec  4 18:12:24 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/xslt.c: Matt Sergeant reported a bug when having comments
	  within an <xsl:text>

Mon Dec  2 17:19:38 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/extensions.c: applied patch from Josh Parsons fixing bug
	  #100056
	* tests/docs/Makefile.am tests/docs/bug-100.xml
	  tests/general/Makefile.am tests/general/bug-100.*: added the
	  example in the regression tests for this case
	* tests/docs/Makefile.am tests/docs/bug-99.xml
	  tests/general/Makefile.am tests/general/bug-99.*: this test
	  covers an xsl:attribute namespace bug that Norm pointed out.

Thu Nov 28 17:52:21 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltInternals.h libxslt/xsltutils.c libxslt/xsltutils.h
	  win32/libxslt.def.src: applied another patch from Richard Jinks
	  for the export of teh sorting routine and allowing per context
	  sort.
